Fix div size on mobile

--- a/res/style.css
+++ b/res/style.css
@@ -4,6 +4,7 @@ body {
   font-family: Gochi Hand;
   text-align: center;
   margin: 0px;
+  padding: 0px;
   overflow: hidden;
   -moz-user-select: -moz-none;
   -khtml-user-select: none;
@@ -16,7 +17,9 @@ div {
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  height: 100vh;
+  position: absolute;
+  height: 100%;
+  width: 100%;
 }
 h1 {
   font-weight: normal;
